namespace Overflow.General
{
    public enum SceneEnum
    {
        Start,
        Main,
        End
    }
}