using System.Collections.Generic;
using UnityEngine;

namespace Overflow.Model.Save
{
    public class SaveScore : MonoBehaviour
    {
        public float score;
        public int stockScore;
        public float incrementValue;
        public int addButtonComprehensiveValue;
        public List<int> addButtonValue;
    }
}